--- a/Weitianshi/pages/projectDetail/projectDetail.wxml
+++ b/Weitianshi/pages/projectDetail/projectDetail.wxml
@@ -1,129 +1,1 @@
-<import src="/pages/Template/Template.wxml" />
-<!--头部引导-->
-<view style="color:#fafafa;font-size:1rpx;">1</view>
-<template is="topBlock" wx:if='{{share_id}}'></template>
-<!--页面主体  -->
-<view id="myDetail">
-  <view class="weui-panel__bd">
-    <!--名片-->
-    <view class="classname">
-      <view class="projectDetailTop">
-        <view class="projectDetailBox">
-          <view class="flex">
-            <view class="describle">{{project.pro_intro}}</view>
-            <image src="/img/img-dujiaqianyue1@2x.png" class="projectDetailType" wx:if="{{project.is_exclusive == 1}}"></image>
-            <image src="/img/img-feidujiaqianyue@2x.png" class="projectDetailType" wx:if="{{project.is_exclusive == 2}}"></image>
-          </view>
-          <block wx:for="{{pro_industry}}" wx:key="{{index}}" wx:if="{{pro_industry != ''}}">
-            <label class="industry" wx:if="{{index < pro_industry.length-1}}">{{item.industry_name}}、</label>
-            <label class="industry" wx:if="{{index == pro_industry.length-1}}">{{item.industry_name}}</label>
-          </block>
-          <view class="allProjectDetail flex" wx:if="{{project.pro_area != ''||pro_finance_stock_after!=0||project.pro_stage!=''||project.pro_scale!=''}}">
-            <view class="projectDetailLine" wx:if="{{project.pro_scale!=''}}">{{project.pro_scale.scale_money}}</view>
-            <view class="projectDetailLine" wx:if="{{pro_finance_stock_after!=0}}">{{project.pro_finance_stock_after}}%</view>
-            <view class="projectDetailLine" wx:if="{{project.pro_stage!=''}}">{{project.pro_stage.stage_name}}</view>
-            <view class="projectDetailLine" wx:if="{{project.pro_area != ''}}">{{project.pro_area.area_title}}</view>
-          </view>
-          <view class="otherInfo flex" bindtap="userDetail" data-id="{{user.user_id}}">
-            <view class="weui-cell__hd">
-              <image wx:if="{{user.user_avatar_url}}" class="others_pic" src="{{user.user_avatar_url}}" />
-              <view wx:if="{{!user.user_avatar_url}}" class="others_nopic">{{user.user_avatar_text}}</view>
-            </view>
-            <view class="weui-cell__bd contacts-detailm">
-              <view class="flex userInfo" style="align-items: baseline;">
-                <view class="userName">{{user.user_name}}</view>
-                <view class="userCareer">{{user.user_career}}</view>
-                <view class="userCompany">{{user.user_company}}</view>
-                <view class="contactPersonBox flex">
-                  <view class="contactPerson">联系Ta</view>
-                  <image src="/img/icon-jiantou.png" class="userIcon"></image>
-                </view>
-              </view>
-            </view>
-          </view>
-        </view>
-      </view>
-    </view>
-    <!--项目亮点-->
-    <view class="brightBox" style="background: white;" wx:if="{{pro_goodness[0].goodness_title}}" wx:if="{{button_type != 1}}">
-      <view class="brightPoint">
-        <view class="brightPointBox flex">
-          <image src="/img/img-star.png" class="titlePic"></image>
-          <view class="title star">{{pro_goodness[0].goodness_title}}</view>
-        </view>
-        <view class="brightContent" class="{{isChecked0?'brightContent':'brightContentAfter'}}" value="{{number}}" wx:if="{{project.pro_goodness}}">{{pro_goodness[0].goodness_desc}}</view>
-        <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked0 == true&& textBeyond5}}" data-check="{{0}}">全部</label>
-        <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked0== false&& textBeyond5}}" data-check="{{0}}" >收起</label>
-      </view>
-    </view>
-    <!--三个tab页  -->
-    <include src='/utils/wxml/threeTab.wxml' />
-    <!--申请查看未能过-->
-    <view class="lockStyle" wx:if="{{show_detail != 1}}">
-      <image class="lock" src="/img/img-suo2@2x.png"></image>
-      <image src="/img/img-bg@2x(2).png" class="lockBackground"> </image>
-    </view>
-  </view>
-</view>
-
-
-
-
-
-<!--邮箱-->
-<view class="modal" wx:if="{{sendPc == 1}}">
-  <view class="bpModal">
-    <view class="bpModalBox">
-      <view class="bpModalText">BP会发送到您的邮箱</view>
-      <input class="writeBpEmail" value="{{userEmail}}" bindinput="writeBpEmail" placeholder="请输入邮箱" />
-      <view class="choiceBox">
-        <view class="flex">
-          <view class="bpModalCancel" bindtap="bpModalCancel" data-index="0">取消</view>
-          <view class="bpModalSure {{checkEmail==true? '':'checkEmail'}}" bindtap="bpModalSure" data-index="0">发送</view>
-        </view>
-      </view>
-    </view>
-  </view>
-</view>
-<!--下面的浮动按钮-->
-<view class="floatBtn" wx:if="{{button_type != 1}}">
-  <view class="accreditation flex" wx:if="{{status == 0 ||status ==3}}">
-    <view>认证投资人、买家FA才可申请查看</view>
-    <view class="toAccreditation" bindtap="toAccreditation">立即认证</view>
-  </view>
-  <view class="accreditation flex" wx:if="{{status == 5 &&button_type == 3}}">
-    <view>认证投资人、买家FA才可申请查看</view>
-    <view class="toAccreditation identitym" bindtap="toAccreditation">立即认证</view>
-  </view>
-  <!-- <view class="push project-applicationm" bindtap="applyProject" wx:if="{{button_type == 3}}" data-project="{{id}}">申请查看</view>
-  <view class="push project-applicationm" bindtap="applyProject" wx:if="{{button_type == 2}}" data-project="{{id}}">重新申请</view> -->
-  <!-- <view class="pushing" wx:if="{{button_type == 0}}">申请中</view> -->
-</view>
-
-<view class=" flex floatBtn flexBox">
-  <view class="collectBox" bindtap="collectProject">
-    <image src="/img/icon-shoucang@2x.png" class="collectPic"></image>
-  </view>
-  <view class="contactProject" catchtap="contactPerson">联系项目方</view>
-  <view class="businessBook" catchtap="businessBook" wx:if="{{button_type == 1}}">商业计划书</view>
-  <view class="businessBook1" wx:if="{{button_type == 0}}">申请中</view>
-  <view class="businessBook project-applicationm" bindtap="applyProject" wx:if="{{button_type == 3}}" data-project="{{id}}">申请查看</view>
-  <view class="businessBook project-applicationm" bindtap="applyProject" wx:if="{{button_type == 2}}" data-project="{{id}}">重新申请</view>
-</view>
-
-<view class="modalBox" hidden="{{modalBox==0}}">
-  <view class="classname" bindtap="closeModal">
-    <image src="/img/icon-guanbi@2x.png" class="close"></image>
-  </view>
-  <view class="contactModalBox">
-    <view class="modalTitle">联系项目方</view>
-    <textarea class="modalContent" placeholder="请简要描述您的约谈需求" bindinput="contentProject" />
-    <view class="modalTips">微天使将为您联系项目方并安排约谈或添加FA哥微信：weitianshicn</view>
-    <view class="btn" bindtap="yesBtn">确定</view>
-  </view>
-</view>
-<!--没有更多-->
-<view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
-
-<!--项目打分  -->
-<!-- <view class="remark" bindtap="projectRemark">项目打分</view> -->
+<include src='/utils/wxml/projectDetail' />
