--- a/Weitianshi/app.wxss
+++ b/Weitianshi/app.wxss
@@ -101,8 +101,8 @@ page {
   border-radius: 4px;
   text-align: center;
   position: fixed;
-  height: 45rpx;
-  line-height: 45rpx;
+  height: auto;
+  line-height: auto;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
