--- a/Weitianshi/pages/my/identity/identityResult/identityResult.wxss
+++ b/Weitianshi/pages/my/identity/identityResult/identityResult.wxss
@@ -1,6 +1,7 @@
 /* pages/my/identity/identityResult/identityResult.wxss */
+
 page {
- background: #ffffff;
+  background: #fff;
 }
 
 .statusPic {
@@ -20,16 +21,18 @@ page {
 }
 
 #textContent {
-  background: #fafafa;  
+  background: #fafafa;
   border-radius: 4rpx;
-  width: 558rpx;
-  height: 64rpx;
-  margin-left: 96rpx;
+  /* width: 558rpx; *//* margin-left: 96rpx; */
+  width: 602rpx;
+  height: 120rpx;
+  margin-left: 48rpx;
+  margin-bottom: 32rpx;
   font-size: 24rpx;
-  color: #666;
+  color: #ccc;
   /* line-height: 24rpx; */
   text-align: left;
-  padding:24rpx 26rpx;
+  padding: 24rpx 26rpx;
 }
 
 .QRCode {
@@ -72,4 +75,41 @@ page {
   text-align: center;
   margin-left: 48rpx;
   margin-top: 134rpx;
+}
+
+/*新样式  */
+
+.statusPic {
+  background: #28dc41;
+  width: 80rpx;
+  height: 80rpx;
+  border-radius: 100%;
+  margin: 0;
+  margin-right: 24rpx;
+}
+
+.upBox {
+  background: #fff;
+  /* border:0 solid #f0f0f0; */
+  box-shadow: 0 0 4px 0 rgba(64, 88, 122, 0.10);
+  border-radius: 4rpx;
+  width: 488rpx;
+  height: 98rpx;
+  padding: 50rpx 126rpx 26rpx 40rpx;
+  font-size: 24rpx;
+  color: #999;
+  line-height: 30rpx;
+  margin: 32rpx 48rpx;
+}
+
+.statusTitle {
+  font-size: 32rpx;
+  color: #333;
+  line-height: 36rpx;
+  text-align: left;
+  margin-bottom: 12rpx;
+}
+.picAfter{
+  width:750rpx;
+  height:944rpx;
 }
