--- a/Weitianshi/pages/my/identity/identityResult/identityResult.wxml
+++ b/Weitianshi/pages/my/identity/identityResult/identityResult.wxml
@@ -1,4 +1,4 @@
-<view class="classname">
+<!-- <view class="classname">
   <view class="classname" wx:if="{{status == 2}}">
     <image src="/img/img-shenhetongguo@2x.png" class="statusPic"></image>
     <view class="statusTitle">恭喜您，{{group_title}}认证审核通过</view>
@@ -11,17 +11,32 @@
     <image src="/img/img-shenhezhong@2x.png" class="statusPic"></image>
     <view class="statusTitle">{{group_title}}认证审核中</view>
   </view>
-  <textarea id="textContent" bindinput="leaveMessage"  maxlength="500" placeholder="如需认证其他身份，可在此留言" />
+  <textarea id="textContent" bindinput="leaveMessage" maxlength="500" placeholder="如需认证其他身份，可在此留言" />
   <image src="/img/img-fageerweima@2x.png" class="QRCode"></image>
   <view class="contextContent" wx:if="{{status == 2}}">认证会员将由微天使创始人直接服务</view>
   <view class="contextContent" wx:if="{{status == 1}}">联系FA哥，加速审核</view>
   <view class="contextContent" wx:if="{{status == 3}}">联系FA哥，重新审核</view>
   <view class="contextContent">扫码加微信weitianshicn</view>
-  <view class="btnYes" bindtap="btnYes" wx:if="{{status != 3}}">确定</view>
-  <view class="flex" wx:if="{{status == 3}}">
-    <view class="reaccreditation" bindtap="reaccreditation">重新认证</view>
-    <view class="reaccreditation" bindtap="reaccreditationYes">确定</view>
-  </view>
-</view>
+
+</view> -->
 <!--错误提示-->
 <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
+
+
+<view class="upBox flex">
+  <view class="statusPic">
+    <!-- <image src="{{imgUrls}}" class="statusPic"></image> -->
+  </view>
+  <view class="classname">
+    <view class="statusTitle">{{group_title}}认证审核通过</view>
+    <view>认证会员将由微天使创始人直接服务 </view>
+    <view>加FA哥微信weitianshicn</view>
+  </view>
+</view>
+<textarea id="textContent" bindinput="leaveMessage" maxlength="500" placeholder="如需认证其他身份，可在此留言" />
+<image src="{{imgUrls}}" class="picAfter"></image>
+<view class="btnYes" bindtap="btnYes" wx:if="{{status != 3}}">确定</view>
+<view class="flex" wx:if="{{status == 3}}">
+  <view class="reaccreditation" bindtap="reaccreditation">重新认证</view>
+  <view class="reaccreditation" bindtap="reaccreditationYes">确定</view>
+</view>
