--- a/Weitianshi/pages/myProject/projectDetail/projectDetail.wxss
+++ b/Weitianshi/pages/myProject/projectDetail/projectDetail.wxss
@@ -1151,19 +1151,43 @@ page {
 .star {
   margin-bottom: 26rpx;
 }
-
-#projectBox .brightContent {
-  /* height: 72rpx; */
-  font-size: 26rpx;
-  color: #666;
-  line-height: 39rpx;
+#projectBox .goodTitle{
+   font-size: 28rpx;
+  color: #333;
+  /* line-height: 28rpx; */
   text-align: left;
+  display: inline;
+}
+#projectBox .goodTitle1{
+  text-align: left;
+   height: auto;
+}
+#projectBox .brightUnfold{
+   height: 90rpx;
+  text-align: left;
+  margin-bottom: 20rpx;
   overflow: hidden;
   text-overflow: -o-ellipsis-lastline;
   text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: vertical; 
+}
+#projectBox .brightUnfoldAfter{
+   height: auto;
+  font-size: 26rpx;
+  color: #666;
+  line-height: 39rpx;
+  text-align: left;
+}
+#projectBox .brightContent {
+   display: inline;
+  /* height: 72rpx; */
+  font-size: 26rpx;
+  color: #666;
+  line-height: 45rpx;
+  text-align: left;
+
 }
 
 #projectBox .brightContentAfter {
