--- a/Weitianshi/pages/oneKeyResearch/oneKeyResearch.wxss
+++ b/Weitianshi/pages/oneKeyResearch/oneKeyResearch.wxss
@@ -1270,8 +1270,55 @@ scroll-view {
 .star {
   margin-bottom: 26rpx;
 }
-
+#projectBox .goodTitle{
+   font-size: 28rpx;
+  color: #333;
+  /* line-height: 28rpx; */
+  text-align: left;
+  display: inline;
+}
+#projectBox .goodTitle1{
+  text-align: left;
+   height: auto;
+   line-height: 50rpx;
+}
+#projectBox .brightUnfold{
+   height: 110rpx;
+  text-align: left;
+  /* margin-bottom: 20rpx; */
+  overflow: hidden;
+  text-overflow: -o-ellipsis-lastline;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical; 
+}
+#projectBox .brightUnfoldAfter{
+   height: auto;
+  font-size: 26rpx;
+  color: #666;
+  line-height: 45rpx;
+  text-align: left;
+}
 #projectBox .brightContent {
+   display: inline;
+  /* height: 72rpx; */
+  font-size: 26rpx;
+  color: #666;
+  line-height: 50rpx;
+  text-align: left;
+
+}
+
+#projectBox .brightContentAfter {
+  height: auto;
+  font-size: 26rpx;
+  color: #666;
+  line-height: 39rpx;
+  text-align: left;
+}
+
+/* #projectBox .brightContent {
   height: 72rpx;
   font-size: 26rpx;
   color: #666;
@@ -1291,7 +1338,7 @@ scroll-view {
   color: #666;
   line-height: 39rpx;
   text-align: left;
-}
+} */
 
 #projectBox  .pro_sort {
   font-size: 20rpx;
