--- a/Weitianshi/pages/my/myNew/myNew.wxss
+++ b/Weitianshi/pages/my/myNew/myNew.wxss
@@ -21,7 +21,7 @@ page {
   text-align: right;
   border: none !important;
   position: absolute;
-  top: 116rpx;
+  top: 152rpx;
   right: 44rpx;
 }
 
@@ -286,3 +286,167 @@ page {
   right: 20%;
   top:13%;
 }
+/*税号  */
+
+.Identification {
+  margin: 4rpx;
+  border: 2rpx solid #40587a;
+  border-radius: 200rpx;
+  width: 100rpx;
+  height: 40rpx;
+  color: #40587a;
+  position: absolute;
+  top: 140rpx;
+  right: 12rpx;
+  font-size: 24rpx;
+  text-align: center;
+  line-height: 40rpx;
+}
+
+.IdentificationNum {
+  height: 616rpx;
+  width: 534rpx;
+  background-color: white;
+  margin-top: 206rpx;
+  margin-left: 64rpx;
+  padding: 56rpx 44rpx 48rpx 44rpx;
+}
+
+.IdentificationTitle {
+  font-family: MicrosoftYaHei;
+  font-size: 44rpx;
+  color: #1f2d3d;
+  line-height: 44rpx;
+  text-align: center;
+  margin: 0 36rpx 24rpx 30rpx;
+}
+
+.IdentificationNumText {
+  font-family: PingFangSC-Regular;
+  font-size: 20rpx;
+  color: #c0ccda;
+  line-height: 20rpx;
+  text-align: center;
+  margin-bottom: 118rpx;
+}.modalBox {
+  background: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.IdentificationTitle {
+  font-family: MicrosoftYaHei;
+  font-size: 44rpx;
+  color: #1f2d3d;
+  line-height: 44rpx;
+  text-align: center;
+  margin: 0 36rpx 24rpx 30rpx;
+}
+
+.IdentificationNumText {
+  font-family: PingFangSC-Regular;
+  font-size: 20rpx;
+  color: #c0ccda;
+  line-height: 20rpx;
+  text-align: center;
+  margin-bottom: 118rpx;
+}
+
+.companyTitle {
+  font-size: 32rpx;
+  color: #99a9bf;
+  letter-spacing: 0;
+  line-height: 32rpx;
+  text-align: left;
+  margin-bottom: 16rpx;
+  margin-top: 48rpx;
+}
+
+.companyName .IdentificationNumber {
+  font-size: 36rpx;
+  color: #475669;
+  letter-spacing: 0;
+  line-height: 36rpx;
+  text-align: left;
+  margin-bottom: 48rpx;
+}
+
+.IdentificationNumber {
+  display: block;
+}
+
+.IdentificationNumCompany {
+  position: relative;
+}
+
+.modalBtn {
+  position: absolute;
+  top: 342rpx;
+  left: 52rpx;
+}
+
+.modalYes {
+  font-size: 28rpx;
+  color: #40587a;
+  letter-spacing: 0;
+  line-height: 56rpx;
+  text-align: center;
+  border: 1rpx solid #40587a;
+  border-radius: 200rpx;
+  width: 180rpx;
+  height: 60rpx;
+  margin-right: 40rpx;
+}
+
+.modalYes:first {
+  margin-right: 40rpx;
+}
+
+.informationText {
+  font-family: PingFangSC-Regular;
+  font-size: 32rpx;
+  color: #475669;
+  letter-spacing: 0;
+  line-height: 32rpx;
+  text-align: center;
+  margin-bottom: 20rpx;
+}
+
+.informationBtn {
+  margin-top: 258rpx;
+  margin-left: 40rpx;
+}
+
+.informationYes {
+  border: 2rpx solid #40587a;
+  border-radius: 200px;
+  width: 182rpx;
+  height: 60rpx;
+  font-size: 28rpx;
+  color: #40587a;
+  letter-spacing: 0;
+  line-height: 60rpx;
+  text-align: center;
+  margin-right: 46rpx;
+}
+
+.informationYes:first {
+  margin-right: 0;
+}
+
+/*税号的横杠*/
+
+.oneLine {
+  display: block;
+  width: 42rpx;
+  border-top: 1rpx solid #99a9bf;
+  margin-top: 19rpx;
+}
+
+.oneLine:first-child {
+  margin-left: 112rpx;
+}
+
